--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-clean-css": "^3.9.4",
     "gulp-connect": "^5.5.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1"
