--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
-    "gulp-clean-css": "^3.9.4",
     "gulp-connect": "^5.5.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1"
   }
